[gd_scene load_steps=4 format=3 uid="uid://bn72g2jp4j620"]

[ext_resource type="Script" uid="uid://d4cldo53uda08" path="res://scripts/heart.gd" id="1_sjtqc"]
[ext_resource type="Texture2D" uid="uid://c25cyoy0q1giy" path="res://assets/icon.svg" id="2_sjxak"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltfwj"]
size = Vector2(64, 64)

[node name="heart" type="Area2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_sjtqc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ltfwj")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_sjxak")

[node name="despawn_timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
